--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@ nav {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  filter: blur(0px);
 }
 
 .navTitulos {
@@ -36,6 +35,40 @@ nav {
   color: #f1f1f1;
 }
 
-header {
+
+/* Header */
+.containerHeader {
+  display: grid;
+  grid-template-columns: 1fr 55% 40% 1fr;
+  height: 100vh;
+}
+.containerHeaderText {
+  grid-column: 1/3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.contentHeaderText {
+  display: flex;
+  flex-direction: column;
+}
+.contentHeaderText h1 {
+  font-size: 10rem;
+  text-transform: uppercase;
+  color: #5c2e00;
+}
+.contentHeaderText h2 {
+  font-size: 2rem;
+  align-self: flex-end;
+  color: #3b3732;
+}
+.contentHeaderText p {
+  font-size: 2rem;
+  width: 60rem;
+}
+
+
+.containerHeaderImg {
+  grid-column: 3;
   
 }
