--- a/css/style.css
+++ b/css/style.css
@@ -99,3 +99,30 @@ nav {
   background-position: center;
   background-size: cover;
 }
+main {
+  height: 100vh;
+  font-family: 'Martel Sans';
+}
+.containerSections {
+  height: 100%;
+  display: grid;
+  grid-template-rows: 30% 10% 10% 10% 10% 30%;
+}
+.secFilosofia {
+  grid-row: 0/2;
+  background-color: #5c2e00;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0rem 5rem 0rem 5rem;
+}
+.containerFilosofia {
+  padding: 20%;
+  color: #f1f1f1;
+  font-size:2rem;
+  text-align: center;
+}
+
+.secProduto {
+  grid-row: 2/3;
+}
