--- a/css/style.css
+++ b/css/style.css
@@ -106,49 +106,62 @@ main {
 .containerSections {
   height: 100%;
   display: grid;
-  grid-template-rows: 30% 10% 10% 10% 10% 30%;
+  grid-template-rows: 30% 10% 10% 10% 40%;
 }
 .secFilosofia {
-  grid-row: 0/2;
+  grid-row: 1/3;
   background-color: #5c2e00;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 0rem 5rem 0rem 5rem;
 }
+.contentFotoSapateiro {
+  width: 45%; 
+  display: flex;
+  justify-content: center;
+}
+.fotoSapateiro {
+  width: 250px;
+  height: 250px;
+  object-fit: cover;
+  object-position: -100px 0px;
+  border-radius: 50%;
+}
+.breatherBar {
+  width: 2px;
+  margin: 0 50px;
+  height: 80%;
+  background-color: #f1f1f1;
+}
 .containerFilosofia {
-  padding: 20%;
+  width: 45%;
   color: #f1f1f1;
   font-size:2rem;
   text-align: center;
 }
 
-.contentFotoSapateiro {
-  position: absolute;
-}
-.fotoSapateiro {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-}
-
-
 
 .secProduto {
-  grid-row: 2/3;
+  grid-row: 4/6;
+
 }
 
 
 /* Card */
 
+.containerCard {
+  height: 100%; 
+  background-color: red;
+}
 .contentCard {
   display: flex;
+  height: 100%;
 }
 .card {
   width: 30rem;
-  height: 50rem;
+  height: 100%;
   background-color: #964b00;
   border-radius: 0.5rem;
-  margin: 10px;
 }
 
