--- a/css/index.css
+++ b/css/index.css
@@ -173,16 +173,28 @@ main {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: center;
   border-radius:  0.5rem 0.5rem 0rem 0rem;
 }
+.card3 .containerCardImg img {
+  object-position: bottom;
+}
 
-.card h1 {
-  margin-top: 1rem;
-  margin-left: 1rem;
+.conteudoCard {
+  display: flex;
+  flex-direction: column;
+  height: 25%;
+  justify-content: space-around;
+}
+.conteudoCard h1 {
   font-size: 3rem;
+  margin-left: 1rem;
   font-weight: bold;
   text-transform: uppercase;
   color: #f1f1f1;
+}
+.conteudoCard button {
+  height: 3rem;
+  align-self: flex-end;
+  margin-right: 1rem;
 }
 
