--- a/css/index.css
+++ b/css/index.css
@@ -161,19 +161,25 @@ main {
 .card {
   width: 30rem;
   height: 100%;
-  background-color: #00000048;
+  background-color: #e9e9e9;
   border-radius: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .containerCardImg {
   width: 100%;
-  height: 75%;
+  height: 85%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 }
 .containerCardImg img {
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 95%;
   object-fit: cover;
-  border-radius:  0.5rem 0.5rem 0rem 0rem;
+  border-radius:  0.5rem;
 }
 .card3 .containerCardImg img {
   object-position: bottom;
@@ -181,20 +187,50 @@ main {
 
 .conteudoCard {
   display: flex;
-  flex-direction: column;
-  height: 25%;
-  justify-content: space-around;
+  justify-self: center;
+  width: 90%;
+  height: 15%;
+  justify-content: space-between;
+  align-items: center;
 }
 .conteudoCard h1 {
-  font-size: 3rem;
-  margin-left: 1rem;
+  font-size: 2.8rem;
   font-weight: bold;
   text-transform: uppercase;
-  color: #f1f1f1;
+  color: #5c5c5c;
 }
 .conteudoCard button {
   height: 3rem;
-  align-self: flex-end;
-  margin-right: 1rem;
+  padding: 0.2rem 1rem;
+  border: none;
+  background-color: #5c2e00;
+  color: #eeeeee;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  transition: 0.05s;
+}
+
+.conteudoCard button:hover {
+  cursor: pointer;
+}
+
+/* Rodapé */
+
+footer {
+  margin-top: 8rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.containerFooter {
+  background-color: #964b00;
+  width: 90%;
+  height: 15rem;
+  display: flex;
+}
+.endereco {
+  display: flex;
+  flex-direction: column;
+  color: #f1f1f1;
 }
 
