--- a/css/index.css
+++ b/css/index.css
@@ -227,10 +227,22 @@ footer {
   width: 90%;
   height: 15rem;
   display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 .endereco {
   display: flex;
   flex-direction: column;
+  font-size: 1.8rem;
+
   color: #f1f1f1;
+}
+.containerSocialIcons {
+  width: 20rem;
+  display: flex;
+  justify-content: space-between;
+}
+.socialIcon {
+  width: 4rem;
 }
 
