--- a/css/index.css
+++ b/css/index.css
@@ -3,37 +3,18 @@
 * {
   font-family: 'Montserrat';
 }
+
+:root {
+  --principal-color: #5c1a00;
+  --sub-principal-color: #962a00;
+  --principal-background-color: #e9e9e9;
+  --principal-font-color: #f1f1f1;
+}
+
 body {
   display: flex;
   flex-direction: column;
-}
-html {
-  font-size: 62.5%;
-}
-
-
-nav {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.navTitulos {
-  display: flex;
-  width: 80%;
-  margin-left: 1fr;
-  margin-top: 2rem;
-  padding: 3rem 0rem 3rem 3rem;
-  background-color: #964b00;
-}
-.navTitulos a {
-  padding-left: 2.5rem;
-  font-size: 2rem;
-  font-weight: bold;
-  font-family: 'Montserrat';
-  text-decoration: none;
-  text-transform: uppercase;
-  color: #f1f1f1;
+  background-color: #e9e9e9;
 }
 
 
@@ -59,7 +40,7 @@ nav {
   font-size: 11rem;
   font-weight: bold;
   text-transform: uppercase;
-  color: #5c2e00;
+  color: var(--principal-color);
 }
 .contentHeaderText h2 {
   font-size: 2.5rem;
@@ -79,17 +60,17 @@ nav {
 }
 .containerButtom a {
   text-decoration: none;
-  color: #5c2e00;
+  color: var(--principal-color);
   text-transform: uppercase;
   font-size: 1.2rem;
-  border: 0.2rem solid #5c2e00;
+  border: 0.2rem solid var(--principal-color);
   padding: 1.5rem;
   transition: 0.1s;
 }
 .containerButtom a:hover {
-  color: #f1f1f1;
+  color: var(--principal-font-color);
   border: 0.2rem solid #f1f1f1;
-  background-color: #5c2e00;
+  background-color: var(--principal-color);
 }
 
 
@@ -107,10 +88,11 @@ main {
   height: 100%;
   display: grid;
   grid-template-rows: 30% 10% 10% 10% 40%;
+  background-color: #e9e9e9;
 }
 .secFilosofia {
   grid-row: 1/3;
-  background-color: #5c2e00;
+  background-color: var(--principal-color);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -136,7 +118,7 @@ main {
 }
 .containerFilosofia {
   width: 45%;
-  color: #f1f1f1;
+  color: var(--principal-font-color);
   font-size:2rem;
   text-align: center;
 }
@@ -161,7 +143,7 @@ main {
 .card {
   width: 30rem;
   height: 100%;
-  background-color: #e9e9e9;
+  background-color: #cecece;
   border-radius: 0.5rem;
   display: flex;
   flex-direction: column;
@@ -197,13 +179,13 @@ main {
   font-size: 2.8rem;
   font-weight: bold;
   text-transform: uppercase;
-  color: #5c5c5c;
+  color: #3f3f3f;
 }
 .conteudoCard button {
   height: 3rem;
   padding: 0.2rem 1rem;
   border: none;
-  background-color: #5c2e00;
+  background-color: var(--principal-color);
   color: #eeeeee;
   font-size: 1.4rem;
   text-transform: uppercase;
@@ -221,11 +203,19 @@ footer {
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  background-color: #e9e9e9;
 }
 .containerFooter {
-  background-color: #964b00;
+  background-color: var(--sub-principal-color);
   width: 90%;
   height: 15rem;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.contentFooter {
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -235,7 +225,7 @@ footer {
   flex-direction: column;
   font-size: 1.8rem;
 
-  color: #f1f1f1;
+  color: var(--principal-font-color);
 }
 .containerSocialIcons {
   width: 20rem;
@@ -244,5 +234,19 @@ footer {
 }
 .socialIcon {
   width: 4rem;
+  cursor: pointer;
 }
-
+.containerCopywriting {
+  position: absolute;
+  display: flex;
+  align-self: flex-end;
+  height: 14rem;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  font-family: 'Martel Sans';
+  color: var(--principal-font-color);
+}
+.containerCopywriting p {
+  align-self: flex-end;
+  margin-right: 1rem;
+}
