--- a/css/about.css
+++ b/css/about.css
@@ -17,3 +17,10 @@ body {
   background-color: #e9e9e9;
 }
 
+
+main {
+    font-family: 'Martel Sans';
+    height: 100vh;
+    width: 80%;
+    background-color: red;
+  }
