--- a/css/footer.css
+++ b/css/footer.css
@@ -8,6 +8,7 @@
   --principal-color: #5c1a00;
   --sub-principal-color: #962a00;
   --principal-background-color: #e9e9e9;
+  --sub-principal-background-color: #f1f1f1;
   --principal-font-color: #f1f1f1;
 }
 /* Rodapé */
@@ -16,8 +17,7 @@ footer {
     margin-top: 8rem;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
-    background-color: #e9e9e9;
+    justify-content: flex-start;  
   }
   .containerFooter {
     background-color: var(--sub-principal-color);
