--- a/css/contact.css
+++ b/css/contact.css
@@ -109,6 +109,28 @@ main {
     background-color: var(--sub-principal-color);
 }
 
+aside {
+    grid-column: 3;
+    grid-row: 4;
+    align-self: flex-end;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: right;
+}
+aside h3 {
+    font-size: 3.3rem;
+    font-weight: 600;
+    align-self: flex-end;
+    color: var(--principal-color);
+}
+aside p {
+    font-size: 2rem;
+    align-self: flex-end;
+    color: var(--sub-principal-color);
+}
+
 .containerImgLoja {
     grid-column: 4/5;
     grid-row: 1/7;
