--- a/css/navbar.css
+++ b/css/navbar.css
@@ -24,7 +24,7 @@ nav {
     padding: 3rem 0rem 3rem 3rem;
     background-color: var(--sub-principal-color);
   }
-  .navTitulos a {
+  .navTitulos>li>a {
     padding-left: 2.5rem;
     font-size: 2rem;
     font-weight: bold;
